2010-01-18  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclStringObj.c (Tcl_AppendFormatToObj): [Bug 2932421]: Stop
	the [format] command from causing argument objects to change their
	internal representation when not needed. Thanks to Alexandre Ferrieux
	for this fix.

2010-01-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclCompExpr.c: Warning: array subscript has type 'char'
	* generic/tclPkg.c:
	* libtommath/bn_mp_read_radix.c:
	* unix/tclUnixCompat.c:	Fix gcc warning: signed and unsigned type
				in conditional expression.
	* unix/tcl.m4 Add support for Haiku and CYGWIN dynamical loading
	* unix/configure (regenerated)
	* unix/Makefile.in
	* unix/.cvsignore
	* tests/stack.test Reduced minimum required C-stack size to 2034:
	         CYGWIN has this stack size and the test runs fine!
	* generic/tclEnv.c Fix environment tests under CYGWIN
	* generic/tclPort.h
	* tests/env.test

2010-01-05  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c (TclPathPart):	Correct inconsistency between
	* tests/fileName.test (filename-14.31):	the string rep and the intrep
	of a path value created by [file rootname].  Thanks to Vitaly Magerya
	for reporting.  [Bug 2918610]

2010-01-03  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tcl.m4 (SC_CONFIG_CFLAGS): [Bug 1636685]: Use the configuration
	for modern FreeBSD suggested by the FreeBSD porter.

2009-12-30  Donal K. Fellows  <dkf@users.sf.net>

	* library/safe.tcl (AliasSource): [Bug 2923613]: Make the safer
	* tests/safe.test (safe-8.9):	  [source] handle a [return] at the
					  end of the file correctly.

2009-12-29  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclInterp.c (Tcl_MakeSafe): [Bug 2895741]: Make sure that
	the min() and max() functions are supported in safe interpreters.

2009-12-28  Donal K. Fellows  <dkf@users.sf.net>

	* unix/configure.in: [Bug 942170]:	Detect the st_blocks field of
	* generic/tclCmdAH.c (StoreStatData):	'struct stat' correctly.