@@ -1,3 +1,12 @@
+2010-01-18  Andreas Kupries  <andreask@activestate.com>
+
+	* generic/tclIO.c (CreateScriptRecord): [Bug 2918110]: Initialize
+	the EventScriptRecord (esPtr) fully before handing it to
+	Tcl_CreateChannelHandler for registration. Otherwise a reflected
+	channel calling 'chan postevent' (== Tcl_NotifyChannel) in its
+	'watchProc' will cause the function 'TclChannelEventScriptInvoker'
+	to be run on an uninitialized structure.
+
 2010-01-18  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclStringObj.c (Tcl_AppendFormatToObj): [Bug 2932421]: Stop
